name:                lambdatex
version:             0.1.0.0
synopsis:            Type-Safe LaTeX EDSL
description:         Type-Safe LaTeX EDSL
homepage:            http://github.com/NorfairKing/lambdatex
license:             GPL
license-file:        LICENSE
author:              Tom Sydney Kerckhove
maintainer:          syd.kerckhove@gmail.com
copyright:           2015 Tom Sydney Kerckhove
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.LaTeX
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite lambdatex-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lambdatex
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/NorfairKing/lambdatex
